fixed responsive bugs: horizontal scrolling and to big hero headline

--- a/assets/style/main.sass
+++ b/assets/style/main.sass
@@ -26,7 +26,6 @@ h2
   font-size: 2.5rem
   text-align: center
   margin: 0 0 4rem 0
-  padding: 0 0 0 1rem
   line-height: 2.5rem
   flex: 1
   &:before
